--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
+    "ajv": "^8.17.1",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
